added a reset button

--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
 </head>
 <body>
     <h1>ETCH-A-SKETCH</h1>
-    <div class="board">
-        <div class="canvas">
+    <div id="content">
+        <div id="tools">
+            <button id="reset" onclick="reset()">RESET</button>
+        </div>
+        <div class="board">
+            <div class="canvas">
+            </div>
         </div>
     </div>
+
 </body>
 </html>
