added the ability to enter a grid size

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <div id="content">
         <div id="tools">
             <button id="reset" onclick="reset()">RESET</button>
+            <div id="sizeSelector">
+                change grid size
+                <input type="number" name="sizeInput" id="sizeInput" min="0" max= "100">
+                <button id="changeSizeButton" onclick="changeSize()">APPLY</button>
+            </div>
         </div>
         <div class="board">
             <div class="canvas">
