added ability to select a color and erase

--- a/index.html
+++ b/index.html
@@ -18,6 +18,25 @@
                 <input type="number" name="sizeInput" id="sizeInput" min="0" max= "100">
                 <button id="changeSizeButton" onclick="changeSize()">APPLY</button>
             </div>
+            <div id="colorSelector">
+                <div id="firstRow">
+                    <div class="color" id="black"></div>
+                    <div class="color" id="blue"></div>
+                    <div class="color" id="red"></div>
+                </div>
+                <div id="secondRow">
+                    <div class="color" id="green"></div>
+                    <div class="color" id="yellow"></div>
+                    <div class="color" id="orange"></div>
+                </div>
+                <div id="thirdRow">
+                    <div><img src="./images/circle.png" alt="circle"></div>
+                    <input type="color" id="picker" value="#FFFFFF">
+                </div>
+            </div>
+            <div id="eraser">
+                <img src="./images/eraser.png" alt="eraser">
+            </div>
         </div>
         <div class="board">
             <div class="canvas">
