added a randomize option that changes the color on every square

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                 <button id="changeSizeButton" onclick="changeSize()">APPLY</button>
             </div>
             <div id="colorSelector">
+                <div id="random">
+                    <button id="randomButton" onclick="randomize()">RANDOMIZE</button>
+                </div>
                 <div id="firstRow">
                     <div class="color" id="black"></div>
                     <div class="color" id="blue"></div>
