added colorRow class

--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
                 <div id="random">
                     <button id="randomButton" onclick="randomize()">RANDOMIZE</button>
                 </div>
-                <div id="firstRow">
+                <div id="firstRow" class="colorRow">
                     <div class="color" id="black"></div>
                     <div class="color" id="blue"></div>
                     <div class="color" id="red"></div>
                 </div>
-                <div id="secondRow">
+                <div id="secondRow" class="colorRow">
                     <div class="color" id="green"></div>
                     <div class="color" id="yellow"></div>
                     <div class="color" id="orange"></div>
                 </div>
-                <div id="thirdRow">
+                <div id="thirdRow" class="colorRow">
                     <div><img src="./images/circle.png" alt="circle"></div>
                     <input type="color" id="picker" value="#FFFFFF">
                 </div>
