--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div class="modal"></div>
+
+    <div class="menu-toggle">
+        <svg viewBox="0 0 100 80" width="40" height="40" class="open active">
+            <rect width="90" height="18"></rect>
+            <rect y="30" width="90" height="18"></rect>
+            <rect y="60" width="90" height="18"></rect>
+        </svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 24 24" class="close">
+            <path
+                d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z" />
+        </svg>
+    </div>
+    
     <h1>ETCH-A-SKETCH</h1>
     <div id="content">
         <div id="tools">
